# CodeNect-VPS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_win.bat  build_win.sh  config.ini  test_project.cn  xmake.lua
.github/: FUNDING.yml
demo/: branch.cn  name.cn
src/: app.cpp  app.h  app.hpp  config.cpp  config.h  config.hpp  defines.hpp  filesystem.cpp  filesystem.h  filesystem.hpp  font.cpp  image.hpp  main.cpp  popup.hpp  popup_project.cpp  popup_project.hpp  popup_run.cpp  popup_run.hpp  project.cpp  sidebar.cpp  sidebar.h  sidebar.hpp  sidebar_handler.cpp  sidebar_handler.hpp  sidebar_indicator.cpp  sidebar_indicator.hpp  ui_button.hpp
src/core/: app.cpp  app.hpp  commands.cpp  commands.hpp  config.cpp  config.hpp  custom_font.hpp  defines.hpp  font.cpp  font.hpp  image.hpp  markdown.cpp  markdown.hpp  message_info.hpp  project.cpp  project.hpp  settings_data.hpp  temp_data.hpp  timer.hpp  utils.cpp  utils.hpp  validations.cpp  validations.hpp  validator.cpp  validator.hpp
src/core/markdown/: a_ask_user_name.md  a_basic_op.md  a_hypotenuse.md  a_string_concat.md  a_summation.md  doc_about_arrange.md  doc_aoob.md  doc_branch_conflict.md  doc_branch_req.md  doc_cmp_req.md  doc_cyclic.md  doc_for_loops.md  doc_how_to_submit_assessment.md  doc_iterator.md  doc_math_req.md  doc_need_inputs.md  doc_op_req.md  doc_printing_array.md  doc_ref_array.md  doc_var_size.md  help_dictionary.md  help_libs.md  tutorial_create_op.md  tutorial_create_print.md  tutorial_create_vars.md  tutorial_navigation.md  tutorial_new_proj.md  tutorial_open_cmd_palette.md  tutorial_open_sidebar.md  tutorial_run.md  tutorial_transpile.md
src/includes/: app.hpp  config.hpp  defines.hpp  filesystem.hpp  font.hpp  image.hpp  node_interface.hpp  popup.hpp  project.hpp  sidebar.hpp  sidebar_handler.hpp  sidebar_indicator.hpp  ui_button.hpp  utils.hpp
src/modules/: assessments.cpp  assessments.hpp  connection.hpp  debugger.cpp  debugger.hpp  filesystem.cpp  filesystem.hpp  input.cpp  input.hpp  node.cpp  node.hpp  node_def.hpp  node_logic.cpp  node_logic.hpp  node_meta.hpp  node_op.cpp  node_op.hpp  node_renderer.cpp  node_renderer.hpp  node_to_code.cpp  node_to_code.hpp  node_val.cpp  node_val.hpp  node_var.cpp  node_var.hpp  nodes.cpp  nodes.hpp  nodes_connection.hpp  simulation.cpp  simulation.hpp  tcc_symbols.hpp  templates.hpp  transpiler.cpp  transpiler.hpp  transpiler_code.cpp
src/node/: connection.cpp  connection.hpp  node.cpp  node.hpp  node_action.cpp  node_action.hpp  node_array.cpp  node_array.hpp  node_array_access.cpp  node_array_access.hpp  node_branch.cpp  node_branch.hpp  node_cast.cpp  node_cast.hpp  node_cmp.cpp  node_cmp.hpp  node_colors.cpp  node_colors.hpp  node_def.hpp  node_ds.hpp  node_entry.cpp  node_entry.hpp  node_for.cpp  node_for.hpp  node_get.hpp  node_if.hpp  node_logic.cpp  node_logic.hpp  node_logic_array.cpp  node_logic_array_access.cpp  node_logic_branch.cpp  node_logic_cast.cpp  node_logic_cmp.cpp  node_logic_for.cpp  node_logic_math.cpp  node_logic_op.cpp  node_logic_print.cpp  node_logic_process_branch.cpp  node_logic_prompt.cpp  node_logic_set.cpp  (+27 more)
src/popups/: popup.cpp  popup.hpp  popup_about.cpp  popup_alert.cpp  popup_new_project.cpp  popup_project.cpp  popup_run.cpp  popup_settings.cpp  popup_success.cpp
src/ui/: about.cpp  about.hpp  alert.cpp  alert.hpp  assessments.cpp  assessments.hpp  button.cpp  button.hpp  command_palette.cpp  command_palette.hpp  create_branch_node.cpp  create_cmp_node.cpp  create_node.cpp  create_node.hpp  create_node_array.cpp  create_node_array_access.cpp  create_node_branch.cpp  create_node_cast.cpp  create_node_cmp.cpp  create_node_entry.cpp  create_node_for.cpp  create_node_math.cpp  create_node_op.cpp  create_node_print.cpp  create_node_prompt.cpp  create_node_set.cpp  create_node_size.cpp  create_node_string.cpp  create_node_var.cpp  diff_viewer.cpp  diff_viewer.hpp  docs.cpp  docs.hpp  help.cpp  help.hpp  info.cpp  info.hpp  inspector.cpp  inspector.hpp  new_project.cpp  (+21 more)
test/: CMakeLists.txt  build.sh  build_win.bat  report  summary  test.cpp  test_assessment.cn  test_cast.cn  test_cmp.cn  test_for.cn  test_math.cn  test_op.cn  test_string.cn
